# stdin_torture

./: .gitignore  README.md  make_data.py  run_tests.py
c/: readline.c  test.json
cpp/: readline.cpp  test.json
java/: readline.java  test.json
js/: bun.lockb  index.ts  package.json  test.json
python/: readline_py.py  test.json
rust/: Cargo.toml  test.json
rust/src/: main.rs
