[package]
name = "readline_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linereader = "0.4.0"
memchr = "2.5.0"
[features]
default=["naive"]
naive=[]
wordcount=[]
explicit_lock=[]
read_until=[]
linereader=[]
